--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,25 +7,74 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context="bt.be.bddapplication.Controler.HomeActivity">
 
     <Button
+    style="@style/MyButton.Green"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:id="@+id/btn_Home_Create_Art"
+    android:text="@string/home_create_product"
+    android:textAlignment="center"
+    android:padding="10dp"
+    android:textSize="40sp"
+    android:textColor="@color/colorPrimary"
+    android:onClick="gotoProduct"/>
+    <Button
+        style="@style/MyButton.Green"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/btn_Home_Create_Art"
-        android:text="@string/home_create_product"
-        android:textColor="@color/colorAccent"
-        android:background="@color/colorPrimary"
-        android:layout_marginRight="40dp"
-        android:layout_marginLeft="40dp"
-        android:onClick="gotoProduct"/>
+        android:id="@+id/btn_Home_Create_provider"
+        android:text="@string/home_create_provider"
+        android:textAlignment="center"
+        android:padding="10dp"
+        android:textSize="40sp"
+        android:textColor="@color/colorPrimary"
+        android:onClick="gotoProvider"/>
+    <Button
+        style="@style/MyButton.Green"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_Home_Create_Fridge"
+        android:text="@string/home_create_frigo"
+        android:textAlignment="center"
+        android:padding="10dp"
+        android:textSize="40sp"
+        android:textColor="@color/colorPrimary"
+        android:onClick="gotoFridge"/>
+    <Button
+        style="@style/MyButton.Green"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_Home_Mvt_Stock"
+        android:text="@string/home_mouvement"
+        android:textAlignment="center"
+        android:padding="10dp"
+        android:textSize="35sp"
+        android:textColor="@color/colorPrimary"
+        android:onClick="gotoMvtStock"/>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/btn_Home_Stat"
+        android:textAlignment="center"
+        android:padding="10dp"
+        android:textSize="40sp"
         android:text="@string/home_stat"
         android:textColor="@color/colorPrimary"
-        android:background="@color/colorAccent"
+        style="@style/MyButton.Green"
         android:onClick="gotoStat"/>
+    <Button
+        style="@style/MyButton.Green"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_Home_Config"
+        android:text="@string/home_config"
+        android:textAlignment="center"
+        android:padding="10dp"
+        android:textSize="40sp"
+        android:textColor="@color/colorPrimary"
+        android:onClick="gotoConfig"/>
 
 </LinearLayout>
