--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,13 +12,21 @@
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">#ffffff</item>
-        <item name="android:textSize">22sp</item>
+        <item name="android:textSize">32sp</item>
     </style>
+
     <style name="MyDisplay" parent="android:Widget.TextView">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/black</item>
-        <item name="android:textSize">32sp</item>
+        <item name="android:textSize">22sp</item>
+    </style>
+    <style name="MyButtonProject" parent="android:Widget.Button">
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@color/colorAccent</item>
+        <item name="android:textColor">#ffffff</item>
+        <item name="android:textSize">22sp</item>
     </style>
 
     <style name="MyButton.Green">
