fini creation produit debut mouvement stock

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -53,7 +53,7 @@
         android:padding="10dp"
         android:textSize="35sp"
         android:textColor="@color/colorPrimary"
-        android:onClick="gotoMvtStock"/>
+        android:onClick="gotoMouvementStock"/>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
