--- a/app/src/main/res/layout/activity_create_product.xml
+++ b/app/src/main/res/layout/activity_create_product.xml
@@ -95,6 +95,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="32dp"
             android:layout_marginTop="32dp"
+            android:onClick="cancel"
             android:text="@string/user_cansel_register"
             style="@style/MyButtonProject"/>
     </LinearLayout>
