--- a/app/src/main/res/layout/activity_sortie_stock.xml
+++ b/app/src/main/res/layout/activity_sortie_stock.xml
@@ -6,14 +6,14 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="bt.be.bddapplication.Controler.SortieStockActivity">
+    android:paddingTop="8dp"
+    tools:context=".Controler.MouvementStockActivity">
     <fragment
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/fragment_mouvement_stock"
-        android:name="bt.be.bddapplication.Fragments.FragmentMouvementStock"
-        tools:layout="@layout/mouvement_stock_fragment">
+        android:name="bt.be.bddapplication.Fragments.MouvementStockFragment"
+        tools:layout="@layout/fragment_mouvement_stock">
 
     </fragment>
 
