--- a/app/src/main/res/layout/activity_sortie_stock.xml
+++ b/app/src/main/res/layout/activity_sortie_stock.xml
@@ -1,20 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="8dp"
-    tools:context=".Controler.MouvementStockActivity">
-    <fragment
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical"
+    android:padding="10dp"
+    android:fillViewport="true">
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/fragment_mouvement_stock"
-        android:name="bt.be.bddapplication.Fragments.MouvementStockFragment"
-        tools:layout="@layout/fragment_mouvement_stock">
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="8dp"
+        tools:context=".Controler.MouvementStockActivity">
+        <fragment
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/fragment_mouvement_stock"
+            android:name="bt.be.bddapplication.Fragments.MouvementStockFragment"
+            tools:layout="@layout/fragment_mouvement_stock">
 
-    </fragment>
+        </fragment>
 
-</RelativeLayout>
+    </RelativeLayout>
+</ScrollView>
