--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,80 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:orientation="vertical"
-    tools:context="bt.be.bddapplication.Controler.HomeActivity">
-
-    <Button
-    style="@style/MyButton.Green"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:id="@+id/btn_Home_Create_Art"
-    android:text="@string/home_create_product"
-    android:textAlignment="center"
     android:padding="10dp"
-    android:textSize="40sp"
-    android:textColor="@color/colorPrimary"
-    android:onClick="gotoProduct"/>
-    <Button
-        style="@style/MyButton.Green"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/btn_Home_Create_provider"
-        android:text="@string/home_create_provider"
-        android:textAlignment="center"
-        android:padding="10dp"
-        android:textSize="40sp"
-        android:textColor="@color/colorPrimary"
-        android:onClick="gotoProvider"/>
-    <Button
-        style="@style/MyButton.Green"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/btn_Home_Create_Fridge"
-        android:text="@string/home_create_frigo"
-        android:textAlignment="center"
-        android:padding="10dp"
-        android:textSize="40sp"
-        android:textColor="@color/colorPrimary"
-        android:onClick="gotoFridge"/>
-    <Button
-        style="@style/MyButton.Green"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/btn_Home_Mvt_Stock"
-        android:text="@string/home_mouvement"
-        android:textAlignment="center"
-        android:padding="10dp"
-        android:textSize="35sp"
-        android:textColor="@color/colorPrimary"
-        android:onClick="gotoMouvementStock"/>
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/btn_Home_Stat"
-        android:textAlignment="center"
-        android:padding="10dp"
-        android:textSize="40sp"
-        android:text="@string/home_stat"
-        android:textColor="@color/colorPrimary"
-        style="@style/MyButton.Green"
-        android:onClick="gotoStat"/>
-    <Button
-        style="@style/MyButton.Green"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/btn_Home_Config"
-        android:text="@string/home_config"
-        android:textAlignment="center"
-        android:padding="10dp"
-        android:textSize="40sp"
-        android:textColor="@color/colorPrimary"
-        android:onClick="gotoConfig"/>
+    android:fillViewport="true">
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:orientation="vertical"
+        tools:context="bt.be.bddapplication.Controler.HomeActivity">
 
-</LinearLayout>
+        <Button
+        style="@style/MyButton.Green"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_Home_Create_Art"
+        android:text="@string/home_create_product"
+        android:textAlignment="center"
+        android:padding="10dp"
+        android:textSize="40sp"
+        android:textColor="@color/colorPrimary"
+        android:onClick="gotoProduct"/>
+        <Button
+            style="@style/MyButton.Green"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_Home_Create_provider"
+            android:text="@string/home_create_provider"
+            android:textAlignment="center"
+            android:padding="10dp"
+            android:textSize="40sp"
+            android:textColor="@color/colorPrimary"
+            android:onClick="gotoProvider"/>
+        <Button
+            style="@style/MyButton.Green"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_Home_Create_Fridge"
+            android:text="@string/home_create_frigo"
+            android:textAlignment="center"
+            android:padding="10dp"
+            android:textSize="40sp"
+            android:textColor="@color/colorPrimary"
+            android:onClick="gotoFridge"/>
+        <Button
+            style="@style/MyButton.Green"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_Home_Mvt_Stock"
+            android:text="@string/home_mouvement"
+            android:textAlignment="center"
+            android:padding="10dp"
+            android:textSize="35sp"
+            android:textColor="@color/colorPrimary"
+            android:onClick="gotoMouvementStock"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_Home_Stat"
+            android:textAlignment="center"
+            android:padding="10dp"
+            android:textSize="40sp"
+            android:text="@string/home_stat"
+            android:textColor="@color/colorPrimary"
+            style="@style/MyButton.Green"
+            android:onClick="gotoStat"/>
+        <Button
+            style="@style/MyButton.Green"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_Home_Config"
+            android:text="@string/home_config"
+            android:textAlignment="center"
+            android:padding="10dp"
+            android:textSize="40sp"
+            android:textColor="@color/colorPrimary"
+            android:onClick="gotoConfig"/>
+
+    </LinearLayout>
+</ScrollView>
