--- a/app/src/main/res/layout/fragment_mouvement_stock.xml
+++ b/app/src/main/res/layout/fragment_mouvement_stock.xml
@@ -76,7 +76,8 @@
             android:inputType="number"/>
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:gravity="center">
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
