--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -69,8 +69,9 @@
             android:textSize="40sp"
             android:text="@string/home_stat"
             android:textColor="@color/colorPrimary"
-            style="@style/MyButton.Green"
-            android:onClick="gotoStat"/>
+            style="@style/MyButton.Green"  />
+            <!-- android:onClick="gotoStat" -->
+
         <Button
             style="@style/MyButton.Green"
             android:layout_width="wrap_content"
